--- a/public/search.html
+++ b/public/search.html
@@ -1,95 +1,164 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador</title>
-    <link href="https://cdn.muicss.com/mui-0.9.20/css/mui.min.css" rel="stylesheet">
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        .search-container { margin-bottom: 20px; }
-        .grid-container { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; }
-        .result-card { padding: 15px; border-radius: 8px; background: #f9f9f9; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); }
-        .bold { font-weight: bold; }
-        .pagination { display: flex; justify-content: space-between; margin-top: 20px; }
-        @media (max-width: 768px) { .grid-container { grid-template-columns: repeat(1, 1fr); } }
-    </style>
+  <meta charset="utf-8">
+  <title>Buscador de Transcripciones</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.muicss.com/mui-0.9.39/css/mui.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 20px;
+      padding: 0;
+      text-align: center;
+    }
+    .search-container {
+      max-width: 800px;
+      margin: auto;
+    }
+    .search-box {
+      width: 100%;
+      padding: 15px;
+      font-size: 18px;
+      border: 2px solid #007bff;
+      border-radius: 8px;
+      outline: none;
+      transition: 0.3s;
+    }
+    .search-box:focus {
+      border-color: #0056b3;
+    }
+    .btn {
+      width: 100%;
+      padding: 12px;
+      background-color: #007bff;
+      color: white;
+      font-size: 18px;
+      border: none;
+      cursor: pointer;
+      margin-top: 10px;
+      border-radius: 8px;
+    }
+    .btn:hover {
+      background-color: #0056b3;
+    }
+    .results-info {
+      font-size: 16px;
+      margin-bottom: 15px;
+    }
+    .results-container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 15px;
+      max-width: 900px;
+      margin: auto;
+    }
+    .result-card {
+      background: #f9f9f9;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+      text-align: left;
+    }
+    .pagination {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
+    }
+    .pagination button {
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      background-color: #007bff;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .pagination button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+  </style>
 </head>
 <body>
 
-    <div class="search-container">
-        <input type="text" id="searchTerm" placeholder="Escribe aquí..." class="mui-textfield">
-        <button onclick="search()" class="mui-btn mui-btn--primary">BUSCAR</button>
-    </div>
+<div id="app" class="search-container">
+  <input v-model="searchTerm" class="search-box" type="text" placeholder="Escribe tu búsqueda y presiona ENTER" @keyup.enter="search">
+  <button class="btn" @click="search">BUSCAR</button>
 
-    <h3 id="resultCount">Resultados (0)</h3>
-    <div class="grid-container" id="results"></div>
+  <div v-if="totalResults > 0">
+    <p class="results-info">Mostrando resultados {{ currentStart }} - {{ currentEnd }} de {{ totalResults }}</p>
+
+    <div class="results-container">
+      <div class="result-card" v-for="hit in searchResults">
+        <strong>{{ hit._source.title }}</strong> - {{ hit._source.author }} <br>
+        📌 {{ hit._source.text }}<br>
+        🎥 <a :href="hit._source.url_youtube + '&t=' + extractTimestamp(hit._source.text)" target="_blank">Ver en YouTube ⏳ ({{ extractTimestamp(hit._source.text) }})</a>
+      </div>
+    </div>
 
     <div class="pagination">
-        <button onclick="prevPage()" class="mui-btn mui-btn--raised" id="prevBtn" disabled>⬅ ANTERIOR</button>
-        <button onclick="nextPage()" class="mui-btn mui-btn--raised" id="nextBtn" disabled>SIGUIENTE ➡</button>
+      <button @click="prevPage" :disabled="searchOffset === 0">⬅ ANTERIOR</button>
+      <button @click="nextPage" :disabled="searchOffset + pageSize >= totalResults">SIGUIENTE ➡</button>
     </div>
+  </div>
+</div>
 
-    <script>
-        let searchTerm = "";
-        let offset = 0;
-        const resultsPerPage = 9;
-
-        async function search() {
-            searchTerm = document.getElementById("searchTerm").value.trim();
-            if (!searchTerm) return alert("Introduce un término de búsqueda");
-
-            offset = 0;
-            fetchResults();
+<script>
+  new Vue({
+    el: "#app",
+    data: {
+      searchTerm: "",
+      searchResults: [],
+      searchOffset: 0,
+      totalResults: 0,
+      pageSize: 9
+    },
+    computed: {
+      currentStart() {
+        return this.searchOffset + 1;
+      },
+      currentEnd() {
+        return Math.min(this.searchOffset + this.pageSize, this.totalResults);
+      }
+    },
+    methods: {
+      async search() {
+        if (!this.searchTerm) return;
+        try {
+          const response = await axios.get(`/search?term=${this.searchTerm}&offset=${this.searchOffset}`);
+          this.searchResults = response.data.hits || [];
+          this.totalResults = response.data.total.value;
+        } catch (error) {
+          console.error("Error en la búsqueda:", error);
         }
-
-        async function fetchResults() {
-            const response = await fetch(`/search?term=${encodeURIComponent(searchTerm)}&offset=${offset}`);
-            const data = await response.json();
-
-            document.getElementById("resultCount").innerText = `Resultados (${data.total.value})`;
-
-            const resultsContainer = document.getElementById("results");
-            resultsContainer.innerHTML = "";
-
-            data.hits.slice(0, resultsPerPage).forEach(hit => {
-                const { title, author, url_youtube, location, text } = hit._source;
-                const highlightedText = hit.highlight?.text[0] || text;
-
-                // Extraer el timestamp en formato 00:00
-                const timeMatch = text.match(/^(\d{1,2}:\d{2})/);
-                const timestamp = timeMatch ? timeMatch[1] : "0:00";
-                const youtubeLink = `${url_youtube}&t=${timestamp.replace(":", "m")}s`;
-
-                // Reemplazar la palabra buscada con <strong>
-                const highlightedHTML = highlightedText.replace(new RegExp(searchTerm, "gi"), match => `<strong>${match}</strong>`);
-
-                resultsContainer.innerHTML += `
-                    <div class="result-card">
-                        <strong>${title}</strong> - ${author} <br>
-                        📌 ${timestamp} ${highlightedHTML} <br>
-                        🎥 <a href="${youtubeLink}" target="_blank">Ver en YouTube ⏳ (${timestamp})</a>
-                    </div>
-                `;
-            });
-
-            // Control de botones de paginación
-            document.getElementById("prevBtn").disabled = offset === 0;
-            document.getElementById("nextBtn").disabled = offset + resultsPerPage >= data.total.value;
+      },
+      prevPage() {
+        if (this.searchOffset > 0) {
+          this.searchOffset -= this.pageSize;
+          this.search();
         }
-
-        function prevPage() {
-            if (offset > 0) {
-                offset -= resultsPerPage;
-                fetchResults();
-            }
+      },
+      nextPage() {
+        if (this.searchOffset + this.pageSize < this.totalResults) {
+          this.searchOffset += this.pageSize;
+          this.search();
         }
-
-        function nextPage() {
-            offset += resultsPerPage;
-            fetchResults();
+      },
+      extractTimestamp(text) {
+        const match = text.match(/(\d{1,2}):(\d{2})/);
+        if (match) {
+          const minutes = parseInt(match[1]);
+          const seconds = parseInt(match[2]);
+          return minutes * 60 + seconds;
         }
-    </script>
+        return 0;
+      }
+    }
+  });
+</script>
 
 </body>
 </html>
