--- a/public/search.html
+++ b/public/search.html
@@ -1,164 +1,124 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Buscador de Transcripciones</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.muicss.com/mui-0.9.39/css/mui.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.muicss.com/mui-0.9.20/css/mui.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.14/vue.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: Arial, sans-serif;
       margin: 20px;
-      padding: 0;
-      text-align: center;
     }
-    .search-container {
-      max-width: 800px;
+    .container {
+      max-width: 1000px;
       margin: auto;
     }
-    .search-box {
+    .search-bar {
       width: 100%;
-      padding: 15px;
       font-size: 18px;
-      border: 2px solid #007bff;
-      border-radius: 8px;
-      outline: none;
-      transition: 0.3s;
-    }
-    .search-box:focus {
-      border-color: #0056b3;
-    }
-    .btn {
-      width: 100%;
-      padding: 12px;
-      background-color: #007bff;
-      color: white;
-      font-size: 18px;
-      border: none;
-      cursor: pointer;
-      margin-top: 10px;
-      border-radius: 8px;
-    }
-    .btn:hover {
-      background-color: #0056b3;
-    }
-    .results-info {
-      font-size: 16px;
-      margin-bottom: 15px;
-    }
-    .results-container {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 15px;
-      max-width: 900px;
-      margin: auto;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      margin-bottom: 20px;
     }
     .result-card {
       background: #f9f9f9;
       padding: 15px;
       border-radius: 8px;
-      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-      text-align: left;
+      margin-bottom: 10px;
+      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    }
+    .result-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 10px;
     }
     .pagination {
       display: flex;
       justify-content: space-between;
       margin-top: 20px;
     }
-    .pagination button {
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      background-color: #007bff;
-      color: white;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .pagination button:disabled {
-      background-color: #ccc;
-      cursor: not-allowed;
+    .highlight {
+      font-weight: bold;
+      color: red;
     }
   </style>
 </head>
 <body>
+  <div id="app" class="container">
+    <input v-model="searchTerm" type="text" class="search-bar" placeholder="Buscar..." @keyup.enter="search">
 
-<div id="app" class="search-container">
-  <input v-model="searchTerm" class="search-box" type="text" placeholder="Escribe tu búsqueda y presiona ENTER" @keyup.enter="search">
-  <button class="btn" @click="search">BUSCAR</button>
+    <button class="mui-btn mui-btn--primary" @click="search">Buscar</button>
 
-  <div v-if="totalResults > 0">
-    <p class="results-info">Mostrando resultados {{ currentStart }} - {{ currentEnd }} de {{ totalResults }}</p>
+    <h3 v-if="totalResults > 0">Resultados ({{ totalResults }})</h3>
+    <p v-if="totalResults > 0">Mostrando {{ startIndex + 1 }} - {{ startIndex + results.length }} de {{ totalResults }}</p>
 
-    <div class="results-container">
-      <div class="result-card" v-for="hit in searchResults">
-        <strong>{{ hit._source.title }}</strong> - {{ hit._source.author }} <br>
-        📌 {{ hit._source.text }}<br>
-        🎥 <a :href="hit._source.url_youtube + '&t=' + extractTimestamp(hit._source.text)" target="_blank">Ver en YouTube ⏳ ({{ extractTimestamp(hit._source.text) }})</a>
+    <div class="result-grid">
+      <div v-for="result in results" :key="result._id" class="result-card">
+        <strong>{{ result._source.title }}</strong> - {{ result._source.author }}  
+        <p>
+          📌 {{ formatTime(result._source.location) }} {{ result.highlight.text[0] || result._source.text }}
+          <br>
+          🎥 <a :href="generateYouTubeLink(result._source.url_youtube, result._source.location)" target="_blank">Ver en YouTube ⏳ ({{ formatTime(result._source.location) }})</a>
+        </p>
       </div>
     </div>
 
     <div class="pagination">
-      <button @click="prevPage" :disabled="searchOffset === 0">⬅ ANTERIOR</button>
-      <button @click="nextPage" :disabled="searchOffset + pageSize >= totalResults">SIGUIENTE ➡</button>
+      <button class="mui-btn mui-btn--flat" @click="prevPage" :disabled="startIndex === 0">⬅ ANTERIOR</button>
+      <button class="mui-btn mui-btn--flat" @click="nextPage" :disabled="startIndex + results.length >= totalResults">SIGUIENTE ➡</button>
     </div>
   </div>
-</div>
 
-<script>
-  new Vue({
-    el: "#app",
-    data: {
-      searchTerm: "",
-      searchResults: [],
-      searchOffset: 0,
-      totalResults: 0,
-      pageSize: 9
-    },
-    computed: {
-      currentStart() {
-        return this.searchOffset + 1;
+  <script>
+    new Vue({
+      el: '#app',
+      data: {
+        searchTerm: '',
+        results: [],
+        totalResults: 0,
+        startIndex: 0,
+        resultsPerPage: 9,  // Máximo 9 resultados por página
       },
-      currentEnd() {
-        return Math.min(this.searchOffset + this.pageSize, this.totalResults);
+      methods: {
+        async search() {
+          if (!this.searchTerm.trim()) return;
+          const url = `/search?term=${encodeURIComponent(this.searchTerm)}&offset=${this.startIndex}`;
+          
+          try {
+            const response = await axios.get(url);
+            this.results = response.data.hits;
+            this.totalResults = response.data.total.value;
+          } catch (error) {
+            console.error("Error en la búsqueda:", error);
+          }
+        },
+        prevPage() {
+          if (this.startIndex > 0) {
+            this.startIndex -= this.resultsPerPage;
+            this.search();
+          }
+        },
+        nextPage() {
+          if (this.startIndex + this.resultsPerPage < this.totalResults) {
+            this.startIndex += this.resultsPerPage;
+            this.search();
+          }
+        },
+        formatTime(seconds) {
+          let h = Math.floor(seconds / 3600);
+          let m = Math.floor((seconds % 3600) / 60);
+          let s = seconds % 60;
+          return `${h}:${m.toString().padStart(2, '0')}:${s.toString().padStart(2, '0')}`;
+        },
+        generateYouTubeLink(url, seconds) {
+          return `${url}&t=${seconds}s`;
+        }
       }
-    },
-    methods: {
-      async search() {
-        if (!this.searchTerm) return;
-        try {
-          const response = await axios.get(`/search?term=${this.searchTerm}&offset=${this.searchOffset}`);
-          this.searchResults = response.data.hits || [];
-          this.totalResults = response.data.total.value;
-        } catch (error) {
-          console.error("Error en la búsqueda:", error);
-        }
-      },
-      prevPage() {
-        if (this.searchOffset > 0) {
-          this.searchOffset -= this.pageSize;
-          this.search();
-        }
-      },
-      nextPage() {
-        if (this.searchOffset + this.pageSize < this.totalResults) {
-          this.searchOffset += this.pageSize;
-          this.search();
-        }
-      },
-      extractTimestamp(text) {
-        const match = text.match(/(\d{1,2}):(\d{2})/);
-        if (match) {
-          const minutes = parseInt(match[1]);
-          const seconds = parseInt(match[2]);
-          return minutes * 60 + seconds;
-        }
-        return 0;
-      }
-    }
-  });
-</script>
-
+    });
+  </script>
 </body>
 </html>
