--- a/public/search.html
+++ b/public/search.html
@@ -128,6 +128,12 @@
             ? `${h}:${m.toString().padStart(2, '0')}:${s.toString().padStart(2, '0')}` 
             : `${m}:${s.toString().padStart(2, '0')}`;
         },
+
+        // Limpia el texto eliminando el tiempo del inicio
+        cleanText(text) {
+         return text.replace(/^(\d{1,2}):(\d{2})(?::(\d{2}))?\s*/, ''); 
+        },
+
         generateYouTubeLink(url, seconds) {
           return `${url}&t=${seconds}s`;
         },
